--- a/_posts/2020-02-04-herosumgame.html
+++ b/_posts/2020-02-04-herosumgame.html
@@ -9,7 +9,7 @@ layout: post
         
         
     <div class="firstpic">
-            <h2>NEW COMIC!</h2>
+            <h2>NEW COMIC! kjfdafodsajof</h2>
         <a href="/herosumgame_archive1.html"><img src="/images/herosum/heroes_coverfront.jpg" width=650 />
             <h2>^^Click to Read^^</h2>
 </body>
