--- a/_posts/2020-02-04-herosumgame.html
+++ b/_posts/2020-02-04-herosumgame.html
@@ -3,6 +3,11 @@ title: herosumgame
 permalink: /herosumgame
 layout: post
 ---
+---
+layout: default
+comments: true
+# other options
+---
 
 
 <body>
@@ -12,4 +17,41 @@ layout: post
             <h3>NEW COMIC!</h3>
         <a href="/herosumgame_archive1.html"><img src="/images/herosum/heroes_coverfront.jpg" width=650 />
             <h3>^^Click to Read^^</h3>
+
+
+            <footer>  
+                <div class="bottomprev">
+                  <a class="prev" href="/shipwreckd.html">&laquo; First</a>
+                  {% if page.previous.url %}
+                    <a class="prev" href="{{page.previous.url}}">&laquo; Prev: {{page.previous.title}}</a>
+                  {% endif %}
+                  {% if page.next.url %}
+                    <a class="next" href="{{page.next.url}}">Next: {{page.next.title}} &raquo;</a>
+                  {% endif %}
+                </div>
+              </footer> 
+              {% if page.comments %}  
+              <div id="disqus_thread"></div>
+          <script>
+          
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+          /*
+          var disqus_config = function () {
+          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://piledrivercomix-com.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                                      
+              {% endif %}  
+              </footer>
 </body>
