--- a/_posts/2020-01-02-avast.html
+++ b/_posts/2020-01-02-avast.html
@@ -2,6 +2,8 @@
 title: avast
 permalink: /avast
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/parkour/1avastcvr.jpg" width =700>
