--- a/_posts/2020-01-04-phedippides.html
+++ b/_posts/2020-01-04-phedippides.html
@@ -2,6 +2,8 @@
 title: phedippides
 permalink: /phedippides
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
     <img src="/images/parkour/PG_phedipcolor.jpg" width =700>
