--- a/_posts/2020-01-05-meridian1.html
+++ b/_posts/2020-01-05-meridian1.html
@@ -2,6 +2,8 @@
 title: meridian1
 permalink: /meridian1
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
     <img src="/images/meridian_1.jpg" width =700>
