--- a/_posts/2020-01-12-bffs.html
+++ b/_posts/2020-01-12-bffs.html
@@ -2,6 +2,8 @@
 title: bffs
 permalink: /bffs
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/bffs/bff_BIG.jpg" width =700>
