--- a/_posts/2020-01-13-afterthehorror-nomorepain.html
+++ b/_posts/2020-01-13-afterthehorror-nomorepain.html
@@ -2,6 +2,8 @@
 title: afterthehorrornomorepain
 permalink: /nomorepain
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/after_horror/after_nomorepain_clr2.jpg" width =700>
