--- a/_posts/2020-01-18-dogfight.html
+++ b/_posts/2020-01-18-dogfight.html
@@ -2,6 +2,8 @@
 title: Dogfight
 permalink: /Dogfight
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/Dogfight.jpg" width =700>
