--- a/_posts/2020-01-19-beaverdroids.html
+++ b/_posts/2020-01-19-beaverdroids.html
@@ -2,6 +2,8 @@
 title: beaverdroids
 permalink: /beaverdroids
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
     <img src="/images/beaverdroids_SCROLLsmaller.jpg" width =700>
