--- a/_posts/2020-02-01-legacy.html
+++ b/_posts/2020-02-01-legacy.html
@@ -2,6 +2,8 @@
 title: legacy
 permalink: /legacy
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
     <img src="/images/legacy_scroll.jpg" width =700>
