--- a/_posts/2020-01-01-shipwreckd.html
+++ b/_posts/2020-01-01-shipwreckd.html
@@ -2,6 +2,8 @@
 title: shipwreckd
 permalink: /shipwreckd
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/shipwreckd.jpg" width ="700" />
