--- a/_posts/2020-01-03-velociraptorfrathouse.html
+++ b/_posts/2020-01-03-velociraptorfrathouse.html
@@ -2,6 +2,8 @@
 title: velociraptorfrathouse
 permalink: /velociraptorfrathouse
 layout: post
+comments: true
+# other options
 ---
 </div>
 <div class="firstpic">
