--- a/_posts/2020-01-06-meridian2.html
+++ b/_posts/2020-01-06-meridian2.html
@@ -2,6 +2,8 @@
 title: meridian2
 permalink: /meridian2
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
     <img src="/images/meridian_2.jpg" width =700>
