--- a/_posts/2020-01-14-theredpill.html
+++ b/_posts/2020-01-14-theredpill.html
@@ -2,6 +2,8 @@
 title: theredpill
 permalink: /theredpill
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/redpill_clr.jpg" width =700>
