--- a/_posts/2020-01-15-afterthehorrorlycan.html
+++ b/_posts/2020-01-15-afterthehorrorlycan.html
@@ -2,6 +2,8 @@
 title: afterthehorrorlycanthewayyoumove
 permalink: /lycanthewayyoumove
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/after_horror/after_armsofthelycan_clrCONT.jpg" width =700>
