--- a/_posts/2020-01-16-afterthehorrorzombae.html
+++ b/_posts/2020-01-16-afterthehorrorzombae.html
@@ -2,6 +2,8 @@
 title: afterthehorrorzombae
 permalink: /zombae
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/after_horror/after_icecream_clr.jpg" width =700>
