--- a/_posts/2020-01-17-kookamungaloids.html
+++ b/_posts/2020-01-17-kookamungaloids.html
@@ -2,6 +2,8 @@
 title: kookamungaloids
 permalink: /kookamungaloids
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
 <img src="/images/kookamungaloids.jpg" width =700>
