--- a/_posts/2020-01-20-parkoursalem.html
+++ b/_posts/2020-01-20-parkoursalem.html
@@ -2,6 +2,8 @@
 title: parkourguysalem
 permalink: /parkourguysalem
 layout: post
+comments: true
+# other options
 ---
 <div class="firstpic">
     <img src="/images/parkour/salem.jpg" width =700>
