--- a/_posts/2020-01-18-dogfight.html
+++ b/_posts/2020-01-18-dogfight.html
@@ -9,6 +9,16 @@ comments: true
 <img src="/images/Dogfight.jpg" width =700>
 </div>
 
+<div class="bottomprev">
+    <a class="prev" href="/shipwreckd.html">&laquo; First</a>
+    {% if page.previous.url %}
+      <a class="prev" href="{{page.previous.url}}">&laquo; Prev: {{page.previous.title}}</a>
+    {% endif %}
+    {% if page.next.url %}
+      <a class="next" href="{{page.next.url}}">Next: {{page.next.title}} &raquo;</a>
+    {% endif %}
+  </div>
+
 <div>
     {% if page.comments %}  
 <div id="disqus_thread"></div>
