what's bugging you bro

--- a/_posts/2020-09-05-buggin.html
+++ b/_posts/2020-09-05-buggin.html
@@ -1,12 +1,23 @@
 ---
-title: wearamask
-permalink: /wearamask
+title: whatsbugginyoubro
+permalink: /whatsbugginyoubro
 layout: post
 comments: true
 # other options
 ---
 <div class="firstpic">
-<img src="/images/wearamask.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_1.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_2.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_3.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_4.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_5.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_6.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_7.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_8.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_9.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_10.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_11.jpg" width =700>
+<img src="/images/BUGGIN/BUGGIN_12.jpg" width =700>
 </div>
 
 <div class="bottomprev">
