--- a/_posts/2020-09-05-whatsbugginyoubro.html
+++ b/_posts/2020-09-05-whatsbugginyoubro.html
@@ -8,6 +8,9 @@ comments: true
 <div class="firstpic">
 <img src="/images/BUGGIN/BUGGIN_1.jpg" width =700>
 <img src="/images/BUGGIN/BUGGIN_2.jpg" width =700>
+</div>
+
+<div id="comic">
 <img src="/images/BUGGIN/BUGGIN_3.jpg" width =700>
 <img src="/images/BUGGIN/BUGGIN_4.jpg" width =700>
 <img src="/images/BUGGIN/BUGGIN_5.jpg" width =700>
