--- a/_posts/2021-04-03-bfom2.html
+++ b/_posts/2021-04-03-bfom2.html
@@ -19,8 +19,10 @@ comments: true
             <h3>^^Click to Read^^</h3>
 
             <h1>Or read the first issue!</h1>
-            <a href="/barrelfullofmonkeys_archive.html"><img src="/images/BFOM_button.jpg" width=200 />
+            </div>
             
+            <div id="comic">
+            <a href="/barrelfullofmonkeys_archive.html"><img src="/images/BFOM_button.jpg" width=200 />
             </div>
 
             <div class="bottomprev">
