--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -8,6 +8,9 @@ comments: true
 <div class="firstpic">
     <img src="/images/brotherhood/brotherhood_1.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_2.jpg" width =700>
+</div>
+
+  <div id="comic">    
     <img src="/images/brotherhood/brotherhood_3.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_4.jpg" width =700>
     </div>
