--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -13,6 +13,10 @@ comments: true
   <div id="comic">    
     <img src="/images/brotherhood/brotherhood_3.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_4.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_5.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_6.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_7.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_8.jpg" width =700>
     </div>
 
     <div class="bottomprev">
