--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -17,6 +17,11 @@ comments: true
     <img src="/images/brotherhood/brotherhood_6.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_7.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_8.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_9.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_10.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_11.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_12.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_13.jpg" width =700>
     </div>
 
     <div class="bottomprev">
