--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -22,6 +22,9 @@ comments: true
     <img src="/images/brotherhood/brotherhood_11.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_12.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_13.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_14.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_15.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_16.jpg" width =700>
     </div>
 
     <div class="bottomprev">
