--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -25,6 +25,12 @@ comments: true
     <img src="/images/brotherhood/brotherhood_14.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_15.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_16.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_17.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_18.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_19.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_20.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_21.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_22.jpg" width =700>
     </div>
 
     <div class="bottomprev">
