--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -31,6 +31,10 @@ comments: true
     <img src="/images/brotherhood/brotherhood_20.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_21.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_22.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_23.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_24.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_25.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_26.jpg" width =700>
     </div>
 
     <div class="bottomprev">
