--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -35,6 +35,10 @@ comments: true
     <img src="/images/brotherhood/brotherhood_24.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_25.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_26.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_27.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_28.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_29.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_30.jpg" width =700>
     </div>
 
     <div class="bottomprev">
