--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -39,6 +39,10 @@ comments: true
     <img src="/images/brotherhood/brotherhood_28.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_29.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_30.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_31.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_32.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_33.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_34.jpg" width =700>
     </div>
 
     <div class="bottomprev">
