--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -43,6 +43,9 @@ comments: true
     <img src="/images/brotherhood/brotherhood_32.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_33.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_34.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_35.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_36.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_37.jpg" width =700>
     </div>
 
     <div class="bottomprev">
