--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -46,7 +46,11 @@ comments: true
     <img src="/images/brotherhood/brotherhood_35.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_36.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_37.jpg" width =700>
-    </div>
+    <img src="/images/brotherhood/brotherhood_38.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_39.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_40.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_41.jpg" width =700>
+        </div>
 
     <div class="bottomprev">
         <a class="prev" href="/shipwreckd.html">&laquo; First</a>
