--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -50,6 +50,17 @@ comments: true
     <img src="/images/brotherhood/brotherhood_39.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_40.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_41.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_42.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_43.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_44.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_45.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_46.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_47.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_48.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_49.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_50.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_51.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_52.jpg" width =700>
         </div>
 
     <div class="bottomprev">
