--- a/blogs/blog.html
+++ b/blogs/blog.html
@@ -10,7 +10,7 @@ layout: blog
     <p>Hey, so my name is Piledriver and these are my comics!  
       <br>If you like them please read, share, comment, like or subscribe.
       <br>Also, I have a patreon and a place to donate.  If you want me to
-     <br>keep making this stuff any support would really help. </p>
+     <br>keep making this stuff any support would really help! </p>
     </body>
     <br>
     <footer>
