--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -61,6 +61,9 @@ comments: true
     <img src="/images/brotherhood/brotherhood_50.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_51.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_52.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_53.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_54.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_55.jpg" width =700>
         </div>
 
     <div class="bottomprev">
