--- a/_posts/2021-06-16-brotherhood.html
+++ b/_posts/2021-06-16-brotherhood.html
@@ -64,6 +64,13 @@ comments: true
     <img src="/images/brotherhood/brotherhood_53.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_54.jpg" width =700>
     <img src="/images/brotherhood/brotherhood_55.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_56.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_57.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_58.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_59.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_60.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_61.jpg" width =700>
+    <img src="/images/brotherhood/brotherhood_62.jpg" width =700>
         </div>
 
     <div class="bottomprev">
