--- a/_posts/2022-07-15-deathbychimpanzees.html
+++ b/_posts/2022-07-15-deathbychimpanzees.html
@@ -6,7 +6,9 @@ comments: true
 # other options
 ---
 <div class="firstpic">
-    <img src="/images/chimp_cover_text.jpg" width =700>
+    <iframe width="420" height="315"
+    src="https://www.youtube.com/watch?v=YNPBvROUfy8&t=4s">
+    </iframe>
     <body>
         <h1>Music album coming! </h1> 
        
