--- a/_posts/2022-07-15-deathbychimpanzees.html
+++ b/_posts/2022-07-15-deathbychimpanzees.html
@@ -7,7 +7,7 @@ comments: true
 ---
 <div class="firstpic">
     <iframe width="420" height="315"
-    src="https://youtu.be/YNPBvROUfy8">
+    src="https://www.youtube.com/embed/watch?v=YNPBvROUfy8&t=98s">
     </iframe>
     <body>
         <h1>Music album coming! </h1> 
