--- a/_posts/2022-07-15-deathbychimpanzees.html
+++ b/_posts/2022-07-15-deathbychimpanzees.html
@@ -6,9 +6,7 @@ comments: true
 # other options
 ---
 <div class="firstpic">
-    <iframe width="420" height="315"
-    src="https://www.youtube.com/embed/watch?v=YNPBvROUfy8&t=98s">
-    </iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/YNPBvROUfy8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <body>
         <h1>Music album coming! </h1> 
        
