--- a/_posts/2022-07-15-deathbychimpanzees.html
+++ b/_posts/2022-07-15-deathbychimpanzees.html
@@ -8,15 +8,14 @@ comments: true
 <div class="firstpic">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/YNPBvROUfy8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <body>
-        <h1>Music album coming! </h1> 
+        <h1>Music album! </h1> 
        
           
         <p>Hey, I bought a bass guitar for fun.  I was just planning
           <br>on learning some songs, but I am insane so I wrote a 
           <br>concept album about Chimpanzees from outer space
          <br>who want to kill all humans.  It's pretty terrible! </p>
-         <br>COMING SOON!!!! </p>
-        </body>
+          </body>
         <br>
         <footer>
 </div>
