--- a/_posts/2022-11-09-Daninthedarkforest.html
+++ b/_posts/2022-11-09-Daninthedarkforest.html
@@ -1,6 +1,6 @@
 ---
-title: brotherhood
-permalink: /brotherhood
+title: daninthedarkforest
+permalink: /daninthedarkforest
 layout: post
 comments: true
 # other options
