--- a/_posts/2022-11-09-Daninthedarkforest3.html
+++ b/_posts/2022-11-09-Daninthedarkforest3.html
@@ -17,6 +17,7 @@ comments: true
     <img src="/images/Danindreamland/dan_darkforest_23.jpg" width =700>
     <img src="/images/Danindreamland/dan_darkforest_24.jpg" width =700>
     <img src="/images/Danindreamland/dan_darkforest_25.jpg" width =700>
+    <img src="/images/Danindreamland/dan_darkforest_26.jpg" width =700>
    
         </div>
 
