--- a/_posts/2022-11-16-Daninthedarkforest4.html
+++ b/_posts/2022-11-16-Daninthedarkforest4.html
@@ -15,6 +15,7 @@ comments: true
     <img src="/images/Danindreamland/dan_darkforest_27.jpg" width =700>
     <img src="/images/Danindreamland/dan_darkforest_28.jpg" width =700>
     <img src="/images/Danindreamland/dan_darkforest_29.jpg" width =700>
+    <img src="/images/Danindreamland/dan_darkforest_30.jpg" width =700>
    
         </div>
 
