--- a/_posts/2022-11-18-danindreamlandentry.html
+++ b/_posts/2022-11-18-danindreamlandentry.html
@@ -14,7 +14,7 @@ comments: true
         
     <div class="firstpic">
             <h3>NEW COMIC!</h3>
-        <a href="/danindreamland_archive.html"><img src="/images/Danindreamland/dan_darkforest_1.jpg" width=650 />
+        <a href="/danindreamland.html"><img src="/images/Danindreamland/dan_darkforest_1.jpg" width=650 />
             <h3>^^Click to Read^^</h3>
             
 
