dan webtoon link

--- a/_posts/2022-11-09-Daninthedarkforest.html
+++ b/_posts/2022-11-09-Daninthedarkforest.html
@@ -6,19 +6,12 @@ comments: true
 # other options
 ---
 <div class="firstpic">
-    <img src="/images/Danindreamland/dan_darkforest_1.jpg" width =700>
-    <img src="/images/Danindreamland/dan_darkforest_2.jpg" width =700>
+  <a href="https://www.webtoons.com/en/challenge/dan-in-dreamland/list?title_no=823437&webtoon-platform-redirect=true"><img src="/images/Danindreamland/dreamland cover FINAL.jpg" width=650 />
+    <h3>^^I made a webtoon!^^</h3>
+    <h3>^^Click to Read^^</h3>
 </div>
 
-  <div id="comic">    
-    <img src="/images/Danindreamland/dan_darkforest_3.jpg" width =700>
-    <img src="/images/Danindreamland/dan_darkforest_5.jpg" width =700>
-    <img src="/images/Danindreamland/dan_darkforest_6.jpg" width =700>
-    <img src="/images/Danindreamland/dan_darkforest_7.jpg" width =700>
-    <img src="/images/Danindreamland/dan_darkforest_8.jpg" width =700>
-    <img src="/images/Danindreamland/dan_darkforest_9.jpg" width =700>
-   
-        </div>
+
 
     <div class="bottomprev">
         <a class="prev" href="/shipwreckd.html">&laquo; First</a>
