--- a/_posts/2022-11-09-Daninthedarkforest.html
+++ b/_posts/2022-11-09-Daninthedarkforest.html
@@ -7,7 +7,7 @@ comments: true
 ---
 <div class="firstpic">
   <a href="https://www.webtoons.com/en/challenge/dan-in-dreamland/list?title_no=823437&webtoon-platform-redirect=true"><img src="/images/Danindreamland/dreamland cover FINAL.jpg" width=650 />
-    <h3>^^I made a webtoon!^^</h3>
+    <h3>^^I made a webtoon!!!^^</h3>
     <h3>^^Click to Read^^</h3>
 </div>
 
