--- a/_posts/2024-12-05-undercoverbezos.html
+++ b/_posts/2024-12-05-undercoverbezos.html
@@ -6,25 +6,25 @@ comments: true
 # other options
 ---
 <div class="firstpic">
-    <img src="/images/bezos/bezos_1" width =700>
-    <img src="/images/bezos/bezos_2" width =700>
+    <img src="/images/bezos/bezos_1.jpg" width =700>
+    <img src="/images/bezos/bezos_2.jpg" width =700>
 </div>
 
   <div id="comic">    
-    <img src="/images/bezos/bezos_3" width =700>
-    <img src="/images/bezos/bezos_4" width =700>
-    <img src="/images/bezos/bezos_5" width =700>
-    <img src="/images/bezos/bezos_6" width =700>
-    <img src="/images/bezos/bezos_7" width =700>
-    <img src="/images/bezos/bezos_8" width =700>
-    <img src="/images/bezos/bezos_9" width =700>
-    <img src="/images/bezos/bezos_10" width =700>
-    <img src="/images/bezos/bezos_11" width =700>
-    <img src="/images/bezos/bezos_12" width =700>
-    <img src="/images/bezos/bezos_13" width =700>
-    <img src="/images/bezos/bezos_14" width =700>
+    <img src="/images/bezos/bezos_3.jpg" width =700>
+    <img src="/images/bezos/bezos_4.jpg" width =700>
+    <img src="/images/bezos/bezos_5.jpg" width =700>
+    <img src="/images/bezos/bezos_6.jpg" width =700>
+    <img src="/images/bezos/bezos_7.jpg" width =700>
+    <img src="/images/bezos/bezos_8.jpg" width =700>
+    <img src="/images/bezos/bezos_9.jpg" width =700>
+    <img src="/images/bezos/bezos_10.jpg" width =700>
+    <img src="/images/bezos/bezos_11.jpg" width =700>
+    <img src="/images/bezos/bezos_12.jpg" width =700>
+    <img src="/images/bezos/bezos_13.jpg" width =700>
+    <img src="/images/bezos/bezos_14.jpg" width =700>
 
-        </div>
+        </div>git
 
     <div class="bottomprev">
         <a class="prev" href="/shipwreckd.html">&laquo; First</a>
